# ai_worker_pato

./: Dockerfile  README.md  docker-compose.yml
.github/workflows/: ros-ci.yml  ros-lint.yml
docker/: Dockerfile  Dockerfile.arm64  container.sh  docker-compose.yml  start.sh
ffw/: CHANGELOG.rst  package.xml
ffw_bringup/: CHANGELOG.rst  ffw.rules  ffw_setup_udev.sh  package.xml  setup.py
ffw_bringup/config/: follower_gazebo_controller_manager.yaml  follower_with_hand_hardware_controller.yaml  follower_with_rh_hardware_controller.yaml  follower_without_hand_hardware_controller.yaml  hand_joint_range_left.yaml  hand_joint_range_right.yaml  hand_left_hardware_controller_manager.yaml  hand_right_hardware_controller_manager.yaml  leader_with_hand_hardware_controller.yaml  leader_with_rh_hardware_controller.yaml  leader_without_hand_hardware_controller.yaml  rs_serial.yaml
ffw_bringup/config/ffw_bg2_follower/: ffw_bg2_follower_ai_hardware_controller.yaml  ffw_bg2_follower_gazebo_controller_manager.yaml  ffw_bg2_follower_initial_positions.yaml
ffw_bringup/config/ffw_bg2_rev2_follower/: ffw_bg2_follower_initial_positions.yaml
ffw_bringup/ffw_bringup/: ffw_create_udev_rules  ffw_create_udev_rules.py  hand_calibrator_left.py  hand_calibrator_right.py  hand_controller_left.py  hand_controller_right.py  hand_controller_setting.py  init_position.py  init_position_for_follower_smooth.py  init_position_for_follower_standalone.py  init_position_for_follower_teleop.py  joint_trajectory_executor.py
ffw_bringup/launch/: bringup.launch.py  camera.launch.py  camera_realsense.launch.py  camera_zed.launch.py  ffw_bg2_ai.launch.py  ffw_bg2_follower_ai.launch.py  ffw_bg2_follower_ai_gazebo.launch.py  ffw_bg2_follower_gazebo.launch.py  ffw_lg2_leader_ai.launch.py  ffw_sg2_follower_ai.launch.py  ffw_sg2_follower_ai_gazebo.launch.py  ffw_teleop_with_hand.launch.py  ffw_teleop_with_rh.launch.py  ffw_teleop_with_rh_low_speed.launch.py  ffw_teleop_without_hand.launch.py  follower.launch.py  follower_with_camera.launch.py  full_system_bringup.launch.py  gazebo_follower.launch.py  hand_calibration.launch.py  hand_controller_two.launch.py  hardware_follower_teleop_with_hand.launch.py  hardware_follower_teleop_with_rh.launch.py  hardware_follower_teleop_with_rh_fast.launch.py  hardware_follower_teleop_with_rh_low_speed.launch.py  hardware_follower_teleop_without_hand.launch.py  hardware_hand_left.launch.py  hardware_hand_right.launch.py  hardware_leader_change.launch.py  hardware_leader_with_hand.launch.py  hardware_leader_with_inspire_hand.launch.py  hardware_leader_with_rh.launch.py  hardware_leader_without_hand.launch.py  rs_multi_camera.launch.py  zed_camera.launch.py
ffw_description/: CHANGELOG.rst  package.xml
ffw_description/launch/: ffw_bg2_rev4.launch.py  ffw_sg2_rev1.launch.py  model_view.launch.py  right_model.launch.py
ffw_description/meshes/follower/: arm_l_link1.stl  (+13 more)
ffw_description/ros2_control/: ffw_follower_system.ros2_control.xacro  ffw_follower_system_without_handneck.ros2_control.xacro  ffw_follower_with_rh_low_speed_system.ros2_control.xacro  ffw_follower_with_rh_system.ros2_control.xacro  ffw_follower_with_rh_system_fast.ros2_control.xacro  ffw_leader_left_system.ros2_control.xacro  ffw_leader_left_with_rh_system.ros2_control.xacro  ffw_leader_left_without_hand_system.ros2_control.xacro  ffw_leader_right_system.ros2_control.xacro  ffw_leader_right_with_rh_system.ros2_control.xacro  ffw_leader_right_without_hand_system.ros2_control.xacro  ffw_leader_system_with_hand.ros2_control.xacro  ffw_leader_system_without_hand.ros2_control.xacro
ffw_description/urdf/: hand_left_standalone.urdf.xacro  hand_right_standalone.urdf.xacro  urdf_left.xacro  urdf_left_12_20.xacro  urdf_right.xacro  urdf_right_12_20.xacro
ffw_fsr_controller/: CHANGELOG.rst  CMakeLists.txt  fsr_plugin.xml  package.xml
ffw_fsr_controller/include/fsr_controller/: fsr_controller.hpp  visibility_control.h
ffw_fsr_controller/src/: fsr_controller.cpp  fsr_controller_parameters.yaml
ffw_hand_library/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
ffw_hand_library/ffw_hand_library/: change_ID.py  check_ID.py  library.py  test.py
ffw_joint_trajectory_command_broadcaster/: CHANGELOG.rst  CMakeLists.txt  package.xml
ffw_joint_trajectory_command_broadcaster/src/: joint_trajectory_command_broadcaster.cpp  joint_trajectory_command_broadcaster_parameters.yaml
ffw_joystick_controller/: CHANGELOG.rst  package.xml
ffw_joystick_controller/src/: joystick_controller.cpp  joystick_controller_parameters.yaml
ffw_moveit_config/: CHANGELOG.rst  CMakeLists.txt  package.xml
ffw_moveit_config/config/: ffw.srdf  joint_limits.yaml  moveit_controllers.yaml
ffw_moveit_config/launch/: demo.launch.py  ffw_bg2_rev4_follower_moveit.launch.py  ffw_sg2_rev1_follower_moveit.launch.py  move_group.launch.py  moveit.launch.py  moveit_core.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ffw_robot_manager/: CHANGELOG.rst  CMakeLists.txt  package.xml
ffw_robot_manager/include/ffw_robot_manager/: ffw_robot_manager.hpp  topic_watchdog.hpp
ffw_robot_manager/src/: ffw_robot_manager.cpp
ffw_spring_actuator_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
ffw_spring_actuator_controller/src/: spring_actuator_controller.cpp
ffw_swerve_drive_controller/: CHANGELOG.rst  CMakeLists.txt  ffw_swerve_drive_controller.xml  package.xml
ffw_swerve_drive_controller/config/: swerve_drive_controller.yaml  swerve_drive_controller_parameter.yaml
ffw_swerve_drive_controller/src/: odometry.cpp  speed_limiter.cpp  swerve_drive_controller.cpp
ffw_teleop/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
ffw_teleop/ffw_teleop/: keyboard_control.py  keyboard_control_with_rh.py
ffw_teleop/scripts/: keyboard_control_only_left.py  keyboard_control_standalone.py  keyboard_control_teleop_with_hand.py  keyboard_control_with_rh.py
joint_trajectory_command_broadcaster/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+46 files in other folders)
