<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ffw</name>
  <version>1.0.0</version>
  <description>
    ROS 2 meta package for FFW
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <author email="wsh@robotis.com">Sungho Woo</author>
  <author email="wwj@robotis.com">Woojin Wie</author>
  <author email="ywh@robotis.com">Wonho Yun</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ffw_bringup</exec_depend>
  <exec_depend>ffw_description</exec_depend>
  <exec_depend>ffw_hand_library</exec_depend>
  <exec_depend>ffw_moveit_config</exec_depend>
  <exec_depend>ffw_teleop</exec_depend>
  <exec_depend>joint_trajectory_command_broadcaster</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
