<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ffw_hand_library</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ywh@robotis.com">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>python3-serial</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
