<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ffw_hand_library</name>
  <version>1.0.0</version>
  <description>
    ROS 2 library for FFW hand
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <author email="ywh@robotis.com">Wonho Yun</author>
  <author email="wwj@robotis.com">Woojin Wie</author>
  <depend>rclpy</depend>
  <depend>python3-serial</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
